--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "uid": "^2.0.0",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
