--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "CodingMelody",
+  "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "codingmelody.ico",
+      "sizes": "64x64 32x32 24x24",
       "type": "image/x-icon"
     }
  
